# phase-field

./: .gitignore  3-pt-bending.msh  CMakeLists.txt  TPZElasticityPhaseField.cpp  TPZElasticityPhaseField.h  TPZPhaseField.cpp  TPZPhaseField.h  TPZPhaseFieldAnalysis.cpp  TPZPhaseFieldAnalysis.h  phasefield.cpp
gmsh_meshes/: 3-pt-bending-disp-surf-topmat.geo  3-pt-bending-disp-surf-topmat.msh  3-pt-bending-disp-surf.geo  3-pt-bending-disp-surf.msh  3-pt-bending.geo  bittencourt.msh  bittencourt_quad.msh  meshgenerator.py
